--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.14.0",
+    "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-textshadow": "^2.1.3"
   },
